llvm/test/tools/llvm-reduce/mir/infer-triple-unknown-target.mir
# RUN: not llvm-reduce --test FileCheck %s -o /dev/null 2>&1 | FileCheck %s

# CHECK: llvm-reduce: error: unable to get target for 'omgwtfbbqcpu64--', see --version and --triple.

--- |
  target triple = "omgwtfbbqcpu64--"

  define void @func() {
    ret void
  }

...
---
name: func
tracksRegLiveness: true
body:             |
  bb.0:

...
